hphp/test/zend/good/ext/standard/tests/streams/stream_copy_to_stream_socket.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
$sockets = @stream_socket_pair(STREAM_PF_UNIX, STREAM_SOCK_STREAM, 0);
if (!$sockets) exit("skip stream_socket_pair");
}
