hphp/test/zend/bad/ext/standard/tests/streams/stream_get_line_nb.php.skipif
<?php
$sockets = @stream_socket_pair(STREAM_PF_UNIX, STREAM_SOCK_STREAM, 0);
if (!$sockets) die("skip stream_socket_pair() should work");
fclose($sockets[0]);
fclose($sockets[1]);
?>